// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tito BLOC Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 8100000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ti.to/queereast/3xftm",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1771682400000,
      },
    ],
    "showingId": "ti.to-queereast/3xftm",
    "title": "3xFTM",
    "url": "https://ti.to/queereast/3xftm",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 8100000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ti.to/queereast/the-time-of-our-lives",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1771768800000,
      },
    ],
    "showingId": "ti.to-queereast/the-time-of-our-lives",
    "title": "The Time of Our Lives",
    "url": "https://ti.to/queereast/the-time-of-our-lives",
  },
]
`;

exports[`Tito The Garden Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ti.to/queereast/second-thoughts-magazine-launch-queer-east-community-social",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1771783200000,
      },
    ],
    "showingId": "ti.to-queereast/second-thoughts-magazine-launch-queer-east-community-social",
    "title": "Second Thoughts Magazine Launch + Queer East Community Social",
    "url": "https://ti.to/queereast/second-thoughts-magazine-launch-queer-east-community-social",
  },
]
`;

exports[`Tito UCL East Community Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 8100000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ti.to/queereast/coming-to-you",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1772046000000,
      },
    ],
    "showingId": "ti.to-queereast/coming-to-you",
    "title": "Coming to You",
    "url": "https://ti.to/queereast/coming-to-you",
  },
]
`;
